umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@carbonyl_derivatives_succinic-anhydride.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: "results.to_edn().to_string_with(&FormatConfig::default())"
---
{
  :atom-typing {
    :output {
      :atoms ["C#v4" "O#n2#v2" "O#n2#v2" "C#h2#v2" "C#h2#v2" "C#v4" "O#n2#v2"]
      :bonds [
        [0 1 :double]
        [0 2 :single]
        [2 3 :single]
        [3 4 :single]
        [4 5 :single]
        [5 6 :double]
        [0 5 :single]]}
    :success true}
  :counts {
    :output {
      :atoms ["C#v4" "O#n2#v2" "O#n2#v2" "C#h2#v2" "C#h2#v2" "C#v4" "O#n2#v2"]
      :bonds [
        [0 1 :double]
        [0 2 :single]
        [2 3 :single]
        [3 4 :single]
        [4 5 :single]
        [5 6 :double]
        [0 5 :single]]}
    :success true}}
