umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@carbonyl_derivatives_tartaric-acid.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: edn_to_string_pretty(&results).unwrap()
---
{
  :atom-typing {
    :output {
      :atoms [
        "C#v4"
        "O#n2#v2"
        "O#h#n2#v"
        "C#h#v3"
        "O#h#n2#v"
        "C#h#v3"
        "O#h#n2#v"
        "C#v4"
        "O#n2#v2"
        "O#h#n2#v"]
      :bonds [
        [0 1 :double]
        [0 2 :single]
        [0 3 :single]
        [3 4 :single]
        [3 5 :single]
        [5 6 :single]
        [5 7 :single]
        [7 8 :double]
        [7 9 :single]]
      :charge 0
      :spin "#u0 #s1"}
    :success true}
  :counts {
    :output {
      :atoms [
        "C#v4"
        "O#n2#v2"
        "O#h#n2#v"
        "C#h#v3"
        "O#h#n2#v"
        "C#h#v3"
        "O#h#n2#v"
        "C#v4"
        "O#n2#v2"
        "O#h#n2#v"]
      :bonds [
        [0 1 :double]
        [0 2 :single]
        [0 3 :single]
        [3 4 :single]
        [3 5 :single]
        [5 6 :single]
        [5 7 :single]
        [7 8 :double]
        [7 9 :single]]
      :charge 0
      :spin "#u0 #s1"}
    :success true}}
