umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@carboxylic_acids_aliphatic_acetyl-bromide.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: "results.to_edn().to_string_with(&FormatConfig::default())"
---
{
  :atom-typing-most-saturated {
    :output {
      :atoms ["C#h3" "C" "O#n2" "Br#n3"]
      :bonds [[0 1 :single] [1 2 :double] [1 3 :single]]}
    :success true
    :tie-breaks [0]}
  :atom-typing-strict {
    :success false
    :tie-breaks []
    :unresolved {
      0 [
        "C#h3#v#d0#t0#a!#m!"
        "C#h2#u#v#d0#t0#a!#m!"
        "C#h#u2#v#d0#t0#a!#m!"
        "C#h#n#v#d0#t0#a!#m!"
        "C#n#u#v#d0#t0#a!#m!"
        "C#u3#v#d0#t0#a!#m!"]}}
  :counts-most-saturated {
    :output {
      :atoms ["C#h3" "C" "O#n2" "Br#n3"]
      :bonds [[0 1 :single] [1 2 :double] [1 3 :single]]}
    :success true
    :tie-breaks [0]}
  :counts-strict {
    :success false
    :tie-breaks []
    :unresolved {0 ["C#n#u#v#a!" "C#h#n#v#a!" "C#h2#u#v#a!" "C#h3#v#a!"]}}}
